implemented responsive layout

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uphold Currency Converter</title>
   </head>
+  <style></style>
   <body>
     <div id="root"></div>
     <script src="app.js"></script>
